<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_height"
        android:paddingEnd="@dimen/tool_bar_padding_right"
        android:paddingStart="@dimen/tool_bar_padding_right"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/activity_background"
            android:src="@drawable/icon_tool_bar_back"
            android:padding="@dimen/tool_bar_btn_padding"
            android:foreground="@drawable/btn_floating_effect"/>

        <TextView
            android:id="@+id/titleCollapsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_credits"
            android:textColor="@color/app_bar_font_title"
            android:textSize="@dimen/app_bar_font_title_collapsed"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="@dimen/credits_padding"
        android:paddingEnd="@dimen/credits_padding"
        android:paddingTop="@dimen/credits_padding"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credits"
                android:textColor="@color/credits_text"
                android:textSize="@dimen/credits_text"
                android:autoLink="web"
                android:textIsSelectable="true"
                android:layout_weight="0"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_btn_margin_bottom_screen"
                android:paddingBottom="@dimen/default_btn_margin_bottom_screen">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintWidth_percent="@dimen/default_btn_width_percentage"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnLicenseMit"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/default_btn_height"
                        android:text="@string/license_mit"
                        android:textSize="@dimen/default_font_button"
                        android:background="@drawable/btn_design"
                        android:foreground="@drawable/btn_effect"
                        android:textColor="@color/popup_btn_text"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:backgroundTint="@color/btn_secondary_background"
                        android:layout_marginBottom="@dimen/default_btn_margin_bottom"
                        android:ellipsize="end"
                        android:lines="1"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnLicenseCCBY3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/default_btn_height"
                        android:text="@string/license_apache_cc_by_3"
                        android:textSize="@dimen/default_font_button"
                        android:background="@drawable/btn_design"
                        android:foreground="@drawable/btn_effect"
                        android:textColor="@color/popup_btn_text"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:backgroundTint="@color/btn_secondary_background"
                        android:layout_marginBottom="@dimen/default_btn_margin_bottom"
                        android:ellipsize="end"
                        android:lines="1"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnLicenseOpenFont"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/default_btn_height"
                        android:text="@string/license_open_font"
                        android:textSize="@dimen/default_font_button"
                        android:background="@drawable/btn_design"
                        android:foreground="@drawable/btn_effect"
                        android:textColor="@color/popup_btn_text"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:backgroundTint="@color/btn_secondary_background"
                        android:layout_marginBottom="@dimen/default_btn_margin_bottom"
                        android:ellipsize="end"
                        android:lines="1"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnLicenseUbuntuFont"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/default_btn_height"
                        android:text="@string/license_ubuntu_font"
                        android:textSize="@dimen/default_font_button"
                        android:background="@drawable/btn_design"
                        android:foreground="@drawable/btn_effect"
                        android:textColor="@color/popup_btn_text"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:backgroundTint="@color/btn_secondary_background"
                        android:layout_marginBottom="@dimen/default_btn_margin_bottom"
                        android:ellipsize="end"
                        android:lines="1"/>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>